--- a/pantry.html
+++ b/pantry.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+   <script src="ambrosiaJava.js"> </script>
   <head>
     <meta charset="utf-8">
     <title>Pantry</title>
+
+    <header>Pantry</header>
+    <nav><ul>
+      <li><a class="active" href="pantry.html">Pantry</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="shoppingList.html">Shopping List</a></li>
+      <li><a href="profile.html">Profile</a></li>
+    </ul></nav>
+
   </head>
   <body>
+    <p>
+    </p>
     <div>
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
   </body>
 
