karli 7/18, shoppingList basic layout

--- a/shoppingList.html
+++ b/shoppingList.html
@@ -2,11 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Pantry</title>
+    <title>Shopping List</title>
+    <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+    <script src="ambrosiaJava.js" > </script>
   </head>
   <body>
-    <div>
-    </div>
+    <h3>
+      Shopping List:<br>
+    </h3>
+    Enter a food to add to your shopping list: <br>
+    <input type="text" id="foodName">
+    <button onclick="addToShopList()"> Enter </button><br>
+    <input type="checkbox" name="food" value="carrot"> Carrots <br>
+    <input type="checkbox" name="food" value="broccoli" > Broccoli<br>
+    <input type="submit" value="Submit">
+
+
   </body>
 
 </html>
