--- a/profile.html
+++ b/profile.html
@@ -3,8 +3,131 @@
   <head>
     <meta charset="utf-8">
     <title>Pantry</title>
+    <link rel= "stylesheet" type="text/css" media="screen" href= "DarbyDesign.css">
+  <script src="javaDesign.js"> </script>
   </head>
+  <style>
+/* The container */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+    background-color: #ffb366;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+</style>
   <body>
+<h2>My Profile</h2>
+
+    <h1>Allergy Restrictions</h1>
+<label class="container">Peanuts
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Shellfish
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Soybean
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Tree Nuts
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Wheat
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Fish
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+
+
+    <h1>Diet Types</h1>
+<label class="container">Vegetarian
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Vegan
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Pescatarian
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Atkins
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Raw Food
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Paleo
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
     <div>
     </div>
   </body>
