--- a/pantry.html
+++ b/pantry.html
@@ -6,18 +6,22 @@
     <meta charset="utf-8">
     <title>Pantry</title>
 
-    <header>Pantry</header>
-    <nav><ul>
-      <li><a class="active" href="pantry.html">Pantry</a></li>
-      <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="shoppingList.html">Shopping List</a></li>
-      <li><a href="profile.html">Profile</a></li>
-    </ul></nav>
+    <div class="nav">
+      <header>Pantry</header>
+      <nav><ul>
+        <li><a class="active" href="pantry.html">Pantry</a></li>
+        <li><a href="recipes.html">Recipes</a></li>
+        <li><a href="shoppingList.html">Shopping List</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </ul></nav>
+    </div>
 
   </head>
   <body>
     <p>
     </p>
+    <div>
+    </div>
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
