--- a/recipes.html
+++ b/recipes.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Pantry</title>
+    <div class="nav">
+      <header>Pantry</header>
+      <nav><ul>
+        <li><a class="active" href="pantry.html">Pantry</a></li>
+        <li><a href="recipes.html">Recipes</a></li>
+        <li><a href="shoppingList.html">Shopping List</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </ul></nav>
+    </div>
   </head>
   <body>
     <div>
