editting and adding all navigation bars

--- a/pantry.html
+++ b/pantry.html
@@ -4,9 +4,9 @@
    <script src="ambrosiaJava.js"> </script>
   <head>
     <meta charset="utf-8">
-    <title>Pantry</title>
+    <title>Ambrosia Pantry</title>
 
-    <header>Pantry</header>
+    <header>Ambrosia</header>
     <nav><ul>
       <li><a class="active" href="pantry.html">Pantry</a></li>
       <li><a href="recipes.html">Recipes</a></li>
