--- a/recipes.html
+++ b/recipes.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+   <script src="ambrosiaJava.js"> </script>
+
   <head>
     <meta charset="utf-8">
-    <title>Pantry</title>
+    <title>Ambrosia Recipes</title>
+    <header>Ambrosia</header>
+
+    <nav><ul>
+      <li><a href="pantry.html">Pantry</a></li>
+      <li><a class="active" href="recipes.html">Recipes</a></li>
+      <li><a href="shoppingList.html">Shopping List</a></li>
+      <li><a href="profile.html">Profile</a></li>
+    </ul></nav>
+
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
+
   </head>
   <body>
     <div>
