--- a/shoppingList.html
+++ b/shoppingList.html
@@ -2,9 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Shopping List</title>
+    <title>Ambrosia Shopping List</title>
     <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
     <script src="ambrosiaJava.js" > </script>
+
+    <header>Ambrosia</header>
+
+    <nav><ul>
+      <li><a href="pantry.html">Pantry</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a class="active" href="shoppingList.html">Shopping List</a></li>
+      <li><a href="profile.html">Profile</a></li>
+    </ul></nav>
+
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
+
   </head>
   <body>
     <h3>
