--- a/pantry.html
+++ b/pantry.html
@@ -4,6 +4,8 @@
    <script src="ambrosiaJava.js"> </script>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="box.css" />
+    <link rel="stylesheet" type="text/css" href="boxstyle.css" />
     <title>Pantry</title>
 
     <header>Pantry</header>
@@ -16,6 +18,46 @@
 
   </head>
   <body>
+    <div class='pantry_container'>
+      <div class='fruits'>
+        <div class='0'>pineapple</div>
+      </div>
+      <div class='vegetables'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='grains'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='nutsandseeds'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='dairy'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='fats'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='spices'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='condiments'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='protein'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='herbs'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='drinks'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='snacks'>
+        <div class='0'>rice</div>
+      </div>
+      <div class='miscellaneous'>
+        <div class='0'>rice</div>
+      </div>
     <p>
     </p>
     <div>
