--- a/profile.html
+++ b/profile.html
@@ -10,10 +10,10 @@
     <div class="nav">
       <header>Profile</header>
       <nav><ul>
-        <li><a class="active" href="pantry.html">Pantry</a></li>
+        <li><a href="pantry.html">Pantry</a></li>
         <li><a href="recipes.html">Recipes</a></li>
         <li><a href="shoppingList.html">Shopping List</a></li>
-        <li><a href="profile.html">Profile</a></li>
+        <li><a class="active" href="profile.html">Profile</a></li>
       </ul></nav>
     </div>
 
