--- a/recipes.html
+++ b/recipes.html
@@ -10,12 +10,12 @@
 
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
-   
+
     <div class="nav">
       <header>Recipes</header>
       <nav><ul>
-        <li><a class="active" href="pantry.html">Pantry</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
+        <li><a href="pantry.html">Pantry</a></li>
+        <li><a class="active" href="recipes.html">Recipes</a></li>
         <li><a href="shoppingList.html">Shopping List</a></li>
         <li><a href="profile.html">Profile</a></li>
       </ul></nav>
