--- a/profile.html
+++ b/profile.html
@@ -19,12 +19,6 @@
 
   </head>
 
-  <nav><ul>
-    <li><a href="pantry.html">Pantry</a></li>
-    <li><a href="recipes.html">Recipes</a></li>
-    <li><a href="shoppingList.html">Shopping List</a></li>
-    <li><a class="active" href="profile.html">Profile</a></li>
-  </ul></nav>
 
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
@@ -95,7 +89,7 @@
     transform: rotate(45deg);
 }
 </style>
-  <body>
+  <body onload="offset()">
 <h2>My Profile</h2>
 
     <h1>Allergy Restrictions</h1>
