--- a/pantry.html
+++ b/pantry.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+<link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
+<link rel="icon" href="logoSmall.png">
    <script src="ambrosiaJava.js"> </script>
   <head>
     <meta charset="utf-8">
@@ -13,8 +15,12 @@
 
 
 
-    <div class="nav">
-      <header>Pantry</header>
+
+
+  </head>
+  <body id="body">
+    <div class="nav" id="nav">
+      <header><img src="logoFull.png"></header>
       <nav><ul>
         <li><a class="active" href="pantry.html">Pantry</a></li>
         <li><a href="recipes.html">Recipes</a></li>
@@ -22,11 +28,9 @@
         <li><a href="profile.html">Profile</a></li>
       </ul></nav>
     </div>
-
-  </head>
-  <body onload="offset()">
-
-      <div class="tab">
+    <div class="container">
+      <div class="tab" id="tab">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <button class="tablinks" onclick="openCategory(event, 'fruits')">Fruits</button>
         <button class="tablinks" onclick="openCategory(event, 'vegetables')">Vegetables</button>
         <button class="tablinks" onclick="openCategory(event, 'grains')">Grains</button>
@@ -41,53 +45,72 @@
         <button class="tablinks" onclick="openCategory(event, 'snacks')">Snacks</button>
         <button class="tablinks" onclick="openCategory(event, 'miscellaneous')">Miscellaneous</button>
       </div>
+      &nbsp; &nbsp; &nbsp; <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;  categories</span>
+      <div class="content" id="main">
 
-      <div id='fruits' class='tabcontent'>
-        <div class='0'>Fruits</div>
+        <div id='fruits' class='tabcontent'>
+          <div class='0'>Fruits</div>
+        </div>
+        <div id='vegetables' class='tabcontent'>
+          <div class='0'>Vegetables</div>
+        </div>
+        <div id='grains' class='tabcontent'>
+          <div class='0'>Grains</div>
+        </div>
+        <div id='nutsandseeds' class='tabcontent'>
+          <div class='0'>Nuts/Seeds</div>
+        </div>
+        <div id='dairy' class='tabcontent'>
+          <div class='0'>Dairy</div>
+        </div>
+        <div id='fats' class='tabcontent'>
+          <div class='0'>Fats</div>
+        </div>
+        <div id='spices' class='tabcontent'>
+          <div class='0'>Spices</div>
+        </div>
+        <div id='condiments' class='tabcontent'>
+          <div class='0'>Condiments</div>
+        </div>
+        <div id='protein' class='tabcontent'>
+          <div class='0'>Protein</div>
+        </div>
+        <div id='herbs' class='tabcontent'>
+          <div class='0'>Herbs</div>
+        </div>
+        <div id='drinks' class='tabcontent'>
+          <div class='0'>Drinks</div>
+        </div>
+        <div id='snacks' class='tabcontent'>
+          <div class='0'>Snacks</div>
+        </div>
+        <div id='miscellaneous' class='tabcontent'>
+          <div class='0'>Miscellaneous</div>
+        </div>
       </div>
-      <div id='vegetables' class='tabcontent'>
-        <div class='0'>Vegetables</div>
-      </div>
-      <div id='grains' class='tabcontent'>
-        <div class='0'>Grains</div>
-      </div>
-      <div id='nutsandseeds' class='tabcontent'>
-        <div class='0'>Nuts/Seeds</div>
-      </div>
-      <div id='dairy' class='tabcontent'>
-        <div class='0'>Dairy</div>
-      </div>
-      <div id='fats' class='tabcontent'>
-        <div class='0'>Fats</div>
-      </div>
-      <div id='spices' class='tabcontent'>
-        <div class='0'>Spices</div>
-      </div>
-      <div id='condiments' class='tabcontent'>
-        <div class='0'>Condiments</div>
-      </div>
-      <div id='protein' class='tabcontent'>
-        <div class='0'>Protein</div>
-      </div>
-      <div id='herbs' class='tabcontent'>
-        <div class='0'>Herbs</div>
-      </div>
-      <div id='drinks' class='tabcontent'>
-        <div class='0'>Drinks</div>
-      </div>
-      <div id='snacks' class='tabcontent'>
-        <div class='0'>Snacks</div>
-      </div>
-      <div id='miscellaneous' class='tabcontent'>
-        <div class='0'>Miscellaneous</div>
-      </div>
-    <p>
-    </p>
-    <div>
     </div>
-    <div>
-      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    </div>
+
+
+
+      <p>
+      </p>
+      <div>
+      </div>
+      <div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+      </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script>
+  function openNav() {
+      document.getElementById("tab").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+  }
+
+  function closeNav() {
+      document.getElementById("tab").style.width = "0";
+      document.getElementById("main").style.marginLeft= "0";
+  }
+  </script>
   </body>
 
 </html>
