--- a/profile.html
+++ b/profile.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+<link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
    <script src="ambrosiaJava.js"> </script>
 
   <head>
     <meta charset="utf-8">
 
     <title>Ambrosia Profile</title>
-    <div class="nav">
-      <header>Profile</header>
-      <nav><ul>
-        <li><a href="pantry.html">Pantry</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="shoppingList.html">Shopping List</a></li>
-        <li><a class="active" href="profile.html">Profile</a></li>
-      </ul></nav>
-    </div>
 
   </head>
 
@@ -90,6 +82,15 @@
 }
 </style>
   <body onload="offset()">
+    <div class="nav" id="nav">
+      <header><img src="logoFull.png"></header>
+      <nav><ul>
+        <li><a href="pantry.html">Pantry</a></li>
+        <li><a href="recipes.html">Recipes</a></li>
+        <li><a href="shoppingList.html">Shopping List</a></li>
+        <li><a class="active" href="profile.html">Profile</a></li>
+      </ul></nav>
+    </div>
 <h2>My Profile</h2>
 
     <h1>Allergy Restrictions</h1>
