--- a/recipes.html
+++ b/recipes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+<link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
    <script src="ambrosiaJava.js"> </script>
 
   <head>
@@ -11,8 +12,12 @@
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
 
-    <div class="nav">
-      <header>Recipes</header>
+
+
+  </head>
+  <body>
+    <div class="nav" id="nav">
+      <header><img src="logoFull.png"></header>
       <nav><ul>
         <li><a href="pantry.html">Pantry</a></li>
         <li><a class="active" href="recipes.html">Recipes</a></li>
@@ -21,9 +26,6 @@
       </ul></nav>
     </div>
 
-  </head>
-  <body onload="offset()">
-    
     <div>
     </div>
   </body>
