--- a/shoppingList.html
+++ b/shoppingList.html
@@ -3,21 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Shopping List</title>
-    <div class="nav" id="nav">
-      <header>Pantry</header>
-      <nav><ul>
-        <li><a href="pantry.html">Pantry</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a class="active" href="shoppingList.html">Shopping List</a></li>
-        <li><a href="profile.html">Profile</a></li>
-      </ul></nav>
-    </div>
 
-   
+
+
   <body onload="offset()">
 
 
     <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
     <script src="ambrosiaJava.js" > </script>
   </head>
   <style>
@@ -82,6 +75,15 @@
 </style>
 
 <body>
+  <div class="nav" id="nav">
+    <header><img src="logoFull.png"></header>
+    <nav><ul>
+      <li><a href="pantry.html">Pantry</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a class="active" href="shoppingList.html">Shopping List</a></li>
+      <li><a href="profile.html">Profile</a></li>
+    </ul></nav>
+  </div>
     <h3>
       Shopping List:<br>
     </h3>
