karli, 7/22, changed the layout of shoppingList

--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
 <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
-<link rel="icon" href="logoSmall.png">
+<link rel="icon" href="logoFull.png">
    <script src="ambrosiaJava.js"> </script>
 
   <head>
