--- a/shoppingList.html
+++ b/shoppingList.html
@@ -1,314 +1,218 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
-    <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
-    <link rel="icon" href="logoSmall.png">
-    <title>Shopping List</title>
-
-
-
-    <script src="ambrosiaJava.js" > </script>
-  </head>
-  <body>
-    <div class="nav" id="nav">
-      <header><img src="logoFull.png"></header>
-
-
-  <body>
-
-
-    <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
-    <script src="ambrosiaJava.js" > </script>
-  </head>
-  <style>
-/* The container */
-.container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+<html>
+<head>
+  <link rel= "stylesheet" type="text/css" media="screen" href= "ambrosiaDesign.css">
+  <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Raleway" rel="stylesheet">
+  <link rel="icon" href="logoSmall.png">
+     <script src="ambrosiaJava.js"> </script>
+     <title>Ambrosia ShoppingList</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  min-width: 250px;
 }
-/* Hide the browser's default checkbox */
-.container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+
+/* Include the padding and border in an element's total width and height */
+* {
+  box-sizing: border-box;
 }
-/* Create a custom checkbox */
-.checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
+
+/* Remove margins and padding from the list */
+ul {
+  margin: 0;
+  padding: 0;
 }
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-    background-color: #ccc;
+
+/* Style the list items */
+ul li {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  list-style-type: none;
+  background: #eee;
+  font-size: 18px;
+  transition: 0.2s;
+
+  /* make the list items unselectable */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-/* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-    background-color: #ffb366;
+
+/* Set all odd list items to a different color (zebra-stripes) */
+ul li:nth-child(odd) {
+  background: #f9f9f9;
 }
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
+
+/* Darker background-color on hover */
+ul li:hover {
+  background: #ddd;
 }
-/* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-    display: block;
+
+/* When clicked on, add a background color and strike out text */
+ul li.checked {
+  background: #888;
+  color: #fff;
+  /* text-decoration: line-through; */
 }
-/* Style the checkmark/indicator */
-.container .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+
+/* Add a "checked" mark when clicked on */
+ul li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+/* Style the close button */
+.closeButton {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.closeButton:hover {
+  background-color: #ff665d;// #f44336
+  color: white;
+}
+
+/* Style the header */
+.headerShop {
+  background-color: #FFE7D3;
+  padding: 30px 40px;
+  color: #ff665d;
+  text-align: center;
+}
+
+/* Clear floats after the header */
+.headerShop:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the input */
+input {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+}
+
+/* Style the "Add" button */
+.addBtn {
+  padding: 10px;
+  width: 25%;
+  background: #d9d9d9;
+  color: #555;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 0;
+}
+
+.addBtn:hover {
+  background-color: #bbb;
 }
 </style>
-
+</head>
 <body>
   <div class="nav" id="nav">
     <header><img src="logoFull.png"></header>
     <nav><ul>
       <li><a href="pantry.html">Pantry</a></li>
       <li><a href="recipes.html">Recipes</a></li>
-      <li><a class="active" href="shoppingList.html">Shopping List</a></li>
-      <li><a href="profile.html">Profile</a></li>
+      <li><a href="shoppingList.html">Shopping List</a></li>
+      <li><a class="active" href="profile.html">Profile</a></li>
     </ul></nav>
   </div>
-    <h3>
-      Shopping List:<br>
-    </h3>
-    Enter a food to add to your shopping list: <br>
 
+<div id="myDIV" class="headerShop">
+  <h2 style="margin:5px">Shopping List</h2>
+  <input type="text" id="myInput" placeholder="Add an item to your shopping list...">
+  <span onclick="newElement()" class="addBtn">Add</span>
+</div>
 
-      <input type="text" id="foodName" autocomplete="off">
-      <button onclick="addToShopList();createShopList();"> Enter </button>
-      <br>
-      <ul id="myList">
+<ul id="myUL">
+  <!-- <li>Hit the gym</li>
+  <li class="checked">Pay bills</li>
+  <li>Meet George</li>
+  <li>Buy eggs</li>
+  <li>Read a book</li>
+  <li>Organize office</li> -->
+</ul>
 
-      </ul>
-      <br>
-      <button id= "removeAllButton" onclick="removeAll()"> Remove All </button>
-      <button id= "removeCheckedButton" onclick="moveCheckedItems()"> Remove Selected </button> <br>
+<script>
+// Create a "close" button and append it to each list item
+var myNodelist = document.getElementsByTagName("LI");
+var i;
+for (i = 0; i < myNodelist.length; i++) {
+  var span = document.createElement("SPAN");
+  var txt = document.createTextNode("\u00D7");
+  span.className = "closeButton";
+  span.appendChild(txt);
+  myNodelist[i].appendChild(span);
+}
 
+// Click on a close button to hide the current list item
+var close = document.getElementsByClassName("closeButton");
+var i;
+for (i = 0; i < close.length; i++) {
+  close[i].onclick = function() {
+    var div = this.parentElement;
+    div.style.display = "none";
+  }
+}
 
+// Add a "checked" symbol when clicking on a list item
+var list = document.querySelector('ul');
+list.addEventListener('click', function(ev) {
+  if (ev.target.tagName === 'LI') {
+    ev.target.classList.toggle('checked');
+  }
+}, false);
 
+// Create a new list item when clicking on the "Add" button
+function newElement() {
+  var li = document.createElement("li");
+  var inputValue = document.getElementById("myInput").value;
+  var t = document.createTextNode(inputValue);
+  li.appendChild(t);
+  if (inputValue === '') {
+    alert("You must write something!");
+  } else {
+    document.getElementById("myUL").appendChild(li);
+  }
+  document.getElementById("myInput").value = "";
 
-  <script>
-    var child;
-    var names;
-    var i = 0;
-    var li;
-    var check;
+  var span = document.createElement("SPAN");
+  var txt = document.createTextNode("\u00D7");
+  span.className = "closeButton";
+  span.appendChild(txt);
+  li.appendChild(span);
 
-
-    function createShopList() {
-
-     if (shopList[i].length>0) {
-        check = false;
-        var li = document.createElement("LI");
-        li.style="list-style='none'";
-        var node = document.createElement("INPUT");
-        node.type = 'button';
-        li.appendChild(node);
-        var textnode = document.createTextNode(shopList[i]);
-        li.appendChild(textnode);
-      //  li.setAttribute("class", "checkButtons")
-        // console.log(li);
-        document.getElementById("myList").appendChild(li);
-        i = i + 1;
-        console.log("if");
-        document.getElementsByClassName("checkButtons").onclick = makeItTrue(check);
-      }else {
-        shopList.splice(i, 1);
-        console.log("else");
-      }
-
+  for (i = 0; i < close.length; i++) {
+    close[i].onclick = function() {
+      var div = this.parentElement;
+      div.style.display = "none";
     }
+  }
+}
+</script>
 
-    function makeItTrue(bool){
-      bool = true;
-      console.log("its true")
-    }
-
-    function createShopListCheck() {
-      if (shopList[i].length> 0  ) { //|| noItemsInList = true
-        noItemsInList = false;
-        li = document.createElement("LI");
-        li.style="list-style='none'";
-        var node = document.createElement("INPUT");
-        node.type = 'checkbox';
-        li.appendChild(node)
-        var textnode = document.createTextNode(shopList[i]);
-        li.appendChild(textnode);
-        document.getElementById("myList").appendChild(li);
-        i = i + 1;
-      }else{
-        shopList.splice(i, 1);
-      }
-
-    }
-    var checkedList = [];
-    var checkingList =[];
-    function moveCheckedItems(){
-      checkingList = document.forms[0];
-      for(g = 0; g< checkingList.length; g++) {
-        if (checkingList[g].checked) {
-          checkedList.push(g);
-          console.log(g);
-        }
-      }
-      // checkedList=[];
-      // for (g = 0; g < shopList.length; g++) {
-      //   console.log("Hello");
-      //   var checkBox = document.getElementById();
-      //   console.log(checkBox);
-      //   if (checkBox.checked == true){
-      //     checkedList.push(g);
-      //     console.log(g);
-      //   }
-      // }
-      // console.log(checkedList);
-      // removeChecked();
-    }
-
-    function removeChecked(){
-      for (k = 0; k < checkedList.length; k++) {
-        var remove = document.getElementById("myList[checkedList[k]]");
-        remove.innerHTML = "";
-      }
-    }
-
-    var noItemsInList;
-    function removeAll(){
-        var remove = document.getElementById("myList");
-        remove.innerHTML = "";
-      //  shopList =[];
-      //  noItemsInList = true;
-
-    }
-  </script>
-
-  <!-- <br>
-  <button id= "removeAllButton" onclick="removeAll()"> Remove All </button>
-  <button id= "removeCheckedButton" onclick="moveCheckedItems()"> Remove Selected </button> <br> -->
-
-    <!-- <label class="container"> carrots
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
-    </label>
-    <label class="container">lettuce
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
-    </label> -->
-
-    <!-- <input type="checkbox" name="food" value="carrot"> Carrots <br>
-    <input type="checkbox" name="food" value="broccoli" > Broccoli<br>
-   -->
-
-  </body>
-
-</html>
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Shopping List</title>
-    <div class="nav">
-      <header>Pantry</header>
-
-      <nav><ul>
-        <li><a href="pantry.html">Pantry</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a class="active" href="shoppingList.html">Shopping List</a></li>
-        <li><a href="profile.html">Profile</a></li>
-      </ul></nav>
-    </div>
-    <div class="login">
-      <button id="loginStatus" class="loginFalse" onclick="openLogin()">Login</button>
-      <div id="loginForm" class="animate">
-        <form class="modal-content" action="/action_page.php">
-          <div class="imgcontainer">
-            <span onclick="closeLogin()" class="close" title="Close Modal">&times;</span>
-            <img src="logoSmall.png" alt="Avatar" class="avatar">
-          </div>
-
-          <div class="box">
-
-          </div>
-
-          <div class="box">
-            <input type="text" placeholder="Username" name="uname" style="font-family: 'Didact Gothic', sans-serif; width: 80%;" required>
-            <br></br>
-            <input type="text" placeholder="Password" name="uname" style="font-family: 'Didact Gothic', sans-serif; width: 80%;" required>
-            <br></br>
-            <button type="button" onclick="closeLogin()" class="cancelbtn">Cancel</button>
-            <br></br>
-            <span class="psw">Forgot password?</span>
-          </div>
-        </form>
-      </div>
-    </div>
-    <div class="signUp">
-      <button id="signUpStatus" class="signUpFalse" onclick="openSignUp()">Sign up</button>
-      <div id="signUpForm" class="animate">
-        <div class="modal-content" action="/action_page.php">
-          <div class="imgcontainer">
-            <span onclick="closeSignUp()" class="close" title="Close Modal">&times;</span>
-            <img src="logoSmall.png" alt="Avatar" class="avatar">
-          </div>
-
-          <div class="box">
-
-          </div>
-
-          <div class="box">
-            <input type="text" placeholder="Username" name="uname" style="font-family: 'Didact Gothic', sans-serif; width: 80%;" required>
-            <br></br>
-            <input type="text" placeholder="Password" name="uname" style="font-family: 'Didact Gothic', sans-serif; width: 80%;" required>
-            <br></br>
-            <button type="button" onclick="closeSignUp()" class="cancelbtn">Cancel</button>
-            <br></br>
-            <span class="psw">Forgot password?</span>
-          </div>
-        </form>
-      </div>
-    </div>
-    <h3>
-      Shopping List:<br>
-    </h3>
-    Enter a food to add to your shopping list: <br>
-    <input type="text" id="foodName">
-    <button onclick="addToShopList()"> Enter </button><br>
-    <input type="checkbox" name="food" value="carrot"> Carrots <br>
-    <input type="checkbox" name="food" value="broccoli" > Broccoli<br>
-    <input type="submit" value="Submit">
-
-
-  </body>
-
+</body>
 </html>
